# NATuG3

./: .gitignore  README.md  __main__.py  config.json  config.pickle  config.py  database.py  datatypes.py  export.xlsx  extras.py  flake.nix  helpers.py  launch.py  launcher.py  logs.nano  main.py  nucleic_acid_profiles.nano  package.nix  presets.nano  pyproject.toml  references.py  requirements.txt  runner.py  saves.nano  settings.nano  settings.py  setup.py  spam.txt  storage.py  structures.py  temp.py  test.txt  tester.py  todo.txt  ui.py  utils.py
archives/: interface.ui
computers/: __init__.py  datatypes.py
config/: __init__.py  domains.py  main.py  nucleic_acid.py  panel.py  panel.ui  profiles.nano  properties.py  restored.nano  settings.py  storage.py  ui.py  workers.py
configuration/: __init__.py  main.py
constants/: bases.py  directions.py  modes.py  strand_switches.py  switches.py  tabs.py  toolbar.py
constructor/: __init__.py  constructor.py  main.py  menus.py  window.py
database/: __init__.py  config.py  domains.py  references.py  settings.py  ui.py
dna_nanotube_tools/: __init__.py  datatypes.py  helpers.py  top_view.py  types.py
domains/: __init__.py  main.py  panel.py  restored.nano  storage.py  widgets.py
implementations/: side_view_two_strands.py
manual/: glossary.tex  manual.tex
natug/: __init__.py  launcher.py  settings.py  utils.py
nucleic_acid/: panel.py  profiles.nano  restored.nano  storage.py
plotting/: constants.py  datatypes.py  structures.py
references/: __init__.py  _application.py  _constructor.py  _domains.py  (+5 more)
(+717 files in other folders)
