[tool.poetry]
name = "natug"
version = "3.0.91"
description = "Nucleic acid design desktop application"
authors = ["Wolf Mermelstein <wolfmermelstein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.7.1"
pyqt6-qt6 = "^6.7.2"
pyqtgraph = "^0.13.7"
pyopengl = "^3.1.7"
numpy = "^2.1.1"
show-in-file-manager = "^1.1.5"
pandas = "^2.2.3"
xlwt = "^1.3.0"
openpyxl = "^3.1.5"
pyqt6-sip = "^13.8.0"
matplotlib = "^3.9.2"
xlsxwriter = "^3.2.0"
cairosvg = "^2.7.1"

[tool.poetry.scripts]
natug = "natug:launch"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
